@@ -1,6 +1,7 @@
 [SNAPSHOT]
  * add PMD checks on compile
  * add all OAuth error codes from supported RFCs (incl. "invalid_token") (thanks to https://github.com/echorebel)
+ * Update LinkedIn Example to API v2 (thanks to https://github.com/peternees)
 
 [6.5.1]
  * cleanup deprecates methods
